@@ -1,3 +1,8 @@
+2004-08-02  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	* libiberty.h (XDELETE, XDELETEVEC, XRESIZEVEC): Remove any
+	const-qualification before disposal.
+
 2004-07-24  Bernardo Innocenti  <bernie@develer.com>
 
 	* ansidecl.h (ARG_UNUSED): New Macro.
